fix stacks spacing

--- a/src/assets/styles/stacks.css
+++ b/src/assets/styles/stacks.css
@@ -6,7 +6,7 @@
   & ul {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     gap: 0.75rem;
 
